--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -198,7 +198,7 @@
 }
 
 //styles CSS pour les écrans de 375 pixels ou moins 
-@media screen and (min-width: 321px)and (max-width:375px){
+@media screen and (min-width: 336px)and (max-width:375px){
     .kasa-header {
         position: absolute;
         //Mwidth: 335px;
@@ -252,7 +252,95 @@
               }
             .Accueil{
                 position: absolute;
-                left: 7%;
+                left: -2%;
+                //right: 24.18%;
+                top: 38.3%;
+                bottom: 25.53%;
+
+                @include  policeStyle1();
+                font-size: 12px;
+                display: flex;
+                align-items: flex-end;
+                text-align: right;
+    
+                color: #FF6060;
+
+            }
+            .Apropos{
+                position: absolute;
+                //left: 78.81%;
+                right: 0%;
+                top: 38.3%;
+                bottom: 25.53%;
+                
+                @include  policeStyle1();
+                font-size: 12px;
+            
+                display: flex;
+                align-items: flex-end;
+                text-align: right;
+                
+                color: #FF6060;
+ 
+            }
+        }
+    } 
+}    
+@media screen and (min-width: 321px)and (max-width:335px){
+    .kasa-header {
+        position: absolute;
+        //Mwidth: 335px;
+        width: 86%;
+        height: 47px;
+        left: 6%;
+        top: 20px;
+
+        .kasa-header-logo{
+            opacity: 0;
+        }
+               
+        .kasa-header-logomobile{
+            opacity: 1;
+            height: 47px;
+            width: 145px;
+        
+            position: absolute;
+            left: 0%;
+            right: 56.72%;
+            top: 0%;
+            bottom: 0%;
+            z-index: 1;
+        }
+        
+        .kasa-header-nav nav{          
+            position: absolute;
+            left: 63%;
+            //left: 137.21%;
+            right: 0%;
+            //top: 38.3%;
+            top: 52%;
+            bottom: 25.53%;
+            height: 17px;
+            width: 140px;
+            width: 46%;
+                   
+            a {
+          
+                text-decoration: none;
+                margin: 0 1rem;
+                position: relative;
+            
+                &:hover {
+                  text-decoration: underline;
+                }
+            
+                &.active {
+                  text-decoration: underline;
+                }
+              }
+            .Accueil{
+                position: absolute;
+                left: -8%;
                 //right: 24.18%;
                 top: 38.3%;
                 bottom: 25.53%;
@@ -428,7 +516,7 @@
         }
     }
   } 
-  @media screen and (min-width: 769px) and (max-width:1024px){
+  @media screen and (min-width: 1001px) and (max-width:1024px){
     .kasa-header {
     
         position: absolute;
@@ -463,6 +551,71 @@
                 top: 25%;
                 bottom: 25%;
                 left: 45%;
+                @include  policeStyle1();
+                font-size: 24px;
+             
+    
+                display: flex;
+                align-items: flex-end;
+                text-align: right;
+               
+                color: #FF6060;
+            }
+            .Apropos{
+                position: absolute;
+               // left: 90.65%;
+                right: 0%;
+                top: 25%;
+                bottom: 25%;
+    
+                @include  policeStyle1();
+                font-size: 24px;
+                display: flex;
+                align-items: flex-end;
+                text-align: right;
+    
+                color: #FF6060;
+    
+    
+            }
+        }
+    }
+  }  
+  @media screen and (min-width: 769px) and (max-width:1000px){
+    .kasa-header {
+    
+        position: absolute;
+        width: 90%;
+        height: 68px;
+        left: 6%;
+        top: 40px;
+        
+       .kasa-header-logo{
+            position: absolute;
+            left: 0%;
+            right: 83.04%;
+            top: 0%;
+            bottom: 0%;
+            z-index: 1;
+            opacity: 1;
+        }
+        .kasa-header-logomobile{
+            opacity: 0;
+        }
+         .kasa-header-nav nav{
+           
+            position: absolute;
+            left: 48%;
+            right: 1%;
+            top: 24%;
+            bottom: 10%;
+            z-index: 1;
+           
+            .Accueil{
+                position: absolute;
+                top: 25%;
+                bottom: 25%;
+                left: 36%;
                 @include  policeStyle1();
                 font-size: 24px;
              
