--- a/src/styles/_apropos.scss
+++ b/src/styles/_apropos.scss
@@ -156,7 +156,8 @@
                   
                     width: 100%;
                     mix-blend-mode: darken;
-                    border-radius: 10px;                  
+                    border-radius: 10px;       
+                    object-fit: cover;           
                }
                
           }
