--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -150,6 +150,7 @@
       position: absolute;
       //position: absolute;
       width: 800px;
+      width: 100%;
       height: 77px;
       
       left: -0.06%;
@@ -237,6 +238,7 @@
       position: absolute;
       //position: absolute;
       width: 800px;
+      width: 100%;
       height: 77px;
       
       left: -0.06%;
@@ -274,13 +276,13 @@
       color:  #FF6060;
     }
   }
-}  
-@media screen and (min-width: 901px) and (max-width:1024px){ 
+} 
+@media screen and (min-width: 1025px) and (max-width:1298px){ 
   .carousel-container {
     position: absolute;
     left: 0%;
     right: 0%;
-    top: 0%;
+    top: 2%;
     bottom: 0%;
     
   
@@ -327,11 +329,11 @@
       left: -0.06%;
       right: 48.96%;
       
-      top: 61.96%;
+      top: 63.96%;
       bottom: 24.06%;
        
       @include  policeStyle1();
-      font-size: 29px;
+      font-size: 26px;
      
       /* or 51px */
           
@@ -349,7 +351,94 @@
      
       top: 57.94%;
       bottom: 19.52%;
-   
+      width: 100%;
+      @include  policeStyle1();
+      font-size: 18px;
+      
+     
+    
+      display: flex;
+      align-items: flex-end;
+    
+      color:  #FF6060;
+    }
+  }
+}   
+@media screen and (min-width: 901px) and (max-width:1024px){ 
+  .carousel-container {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 2%;
+    bottom: 0%;
+    
+  
+    mix-blend-mode: normal;
+    border-radius: 25px;
+    .carousel-image {
+      width: 100%;
+      
+      height: 415px;
+      border-radius: 25px;
+      object-fit: cover;
+    }
+  
+    .arrow-backwards, .arrow-forward {
+      position: absolute;
+      cursor: pointer;
+      height: 73px;
+      width: 40px;
+      top: 32%;
+      transform: translateY(-50%);
+      z-index: 1;
+      color: white;
+  
+      &.arrow-backwards {
+        left: 0;
+        margin-left: 15px;
+      }
+  
+      &.arrow-forward {
+        right: 2%;
+      }
+    }
+     
+  }
+  
+  
+  .Carousel-title-location{
+    h1{
+      position: absolute;
+      //position: absolute;
+      width: 700px;
+      height: 77px;
+     
+      left: -0.06%;
+      right: 48.96%;
+      
+      top: 63.96%;
+      bottom: 24.06%;
+       
+      @include  policeStyle1();
+      font-size: 26px;
+     
+      /* or 51px */
+          
+      display: flex;
+      align-items: flex-end;
+          
+      color: #FF6060;
+          
+    }
+    p{
+      position: absolute;
+      //left: 6.94%;
+      left: -0.06%;
+      right: 80.83%;
+     
+      top: 57.94%;
+      bottom: 19.52%;
+      width: 100%;
       @include  policeStyle1();
       font-size: 18px;
       
@@ -476,7 +565,7 @@
     position: absolute;
     left: 0%;
     right: 0%;
-    top: 0%;
+    top: -2%;
     bottom: 0%;
     
 
@@ -485,8 +574,7 @@
     height: 255px;
     //width: 335px;
     width: 100%;
-    left: 0px;
-    top: 0px;
+   
     border-radius: 10px;
     width: 100%;
 
